This version works to fetch data from both sku's and product names'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <style>
-  * {
+  body {
    font-family: agenda-thin, sans-serif;
     background: #1f1f2e;
     color:   #e1e1ea; 
   }
-  center{
-    margin-top: 8%;
 
-     }
   </style>
 </head>
 <body>
-	<center>
+  <%= notice %>
+  <%= alert %>
+
  		<%= yield %>
-	</center>
+
 </body>
 </html>
 
