--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ 
+ #firsttable td:first-child
+ {
+ 	color: #a3a3c2;
+ }
+
+ #submit_search
+ {
+  display: none;
+ }
